Fixed overflowing header text

--- a/src/css/mainscreen/homescreen-styles.css
+++ b/src/css/mainscreen/homescreen-styles.css
@@ -21,7 +21,7 @@
     position: absolute;
     top: 2%;
     text-align: center;
-    left: 50%;
+    left: 40%;
 }
 
 .categorybtnswrap{
